@@ -7,16 +7,29 @@
 //   All Rights Reserved.
 //
 
+#include <arpa/inet.h>
+
 #include "syclock.h"
 #include "syconfig.h"
+
+//
+// FIXME: Rename these!
+//
+#define PLL_LOCKRANGE_JIFFIES	(HZ/10) /* +/-100ms */
+#define PLL_TIMEOUT_JIFFIES	(10*HZ) /* 10s */
 
 SyClock::SyClock(QObject *parent)
   : QObject(parent)
 {
   clock_counter=0;
   clock_burst_counter=0;
-  clock_window_active=false;
   clock_pll_ratio=1.0;
+  clock_clock_frame=0;
+  clock_pcm_frame=0;
+  clock_diff_clock_frame=0;
+  clock_diff_pcm_frame=0;
+  clock_pll_ratio=1.0;
+  clock_clock_count=0;
 
   //
   // Clock Socket
@@ -49,44 +62,57 @@ SyClock::~SyClock()
 }
 
 
-double SyClock::pllRatio() const
-{
-  return clock_pll_ratio;
-}
-
-
 void SyClock::readyReadData()
 {
   char data[1500];
   int n;
   QHostAddress addr;
   uint16_t port;
-  double now;
+  uint32_t frame;
 
   while((n=clock_socket->readDatagram(data,1500,&addr,&port))>0) {
-    //    printf("received %d bytes from %s:%u\n",
-    //	   n,(const char *)addr.toString().toAscii(),0xFFFF&port);
+    //seq=ntohl(*((uint32_t *)data));
+    frame=ntohl(*((uint32_t *)(data+4)));
 
-    now=GetTime();
-    clock_tick_window.push(now);
-    while(clock_tick_window.front()<(now-SYCLOCK_WINDOW_SIZE)) {
-      clock_tick_window.pop();
-      clock_window_active=true;
+    if(clock_clock_frame==0) {  // Initialize PLL
+      clock_clock_frame=frame;
+      clock_pcm_frame=frame;
     }
-    if(clock_window_active) {
-      clock_pll_ratio=30.0*SYCLOCK_WINDOW_SIZE/clock_tick_window.size();
+    else {
+      if((clock_clock_count==0)||
+	 ((frame-clock_pcm_frame)<
+	  (clock_diff_clock_frame-clock_diff_pcm_frame))) {
+	clock_diff_clock_frame=frame;
+	clock_diff_pcm_frame=clock_pcm_frame;
+      }
+      if(clock_clock_count++>=50) {
+	int64_t diff=(int64_t)clock_diff_clock_frame-
+	  (int64_t)clock_diff_pcm_frame;
+	if(diff>0) {
+	  clock_pll_ratio=clock_pll_ratio*0.9999999999;
+	}
+	if(diff<0) {
+	  clock_pll_ratio=clock_pll_ratio*1.0000000001;
+	}
+	emit pllUpdated(clock_pll_ratio,diff);
+	/*
+	printf("clock: %u  pcm: %u  diff: %ld  ratio: %15.13lf\n",
+	       clock_diff_clock_frame,clock_diff_pcm_frame,diff,clock_pll_ratio);
+	*/
+	clock_clock_count=0;
+      }
     }
+    //    printf("SEQ: %u  FRAME: %u\n",seq,frame);
   }
-  //  printf("PLL Ratio: %9.7lf\n",clock_pll_ratio);
 }
 
 
 void SyClock::pllData()
 {
-  clock_burst_counter=200;
+  clock_burst_counter=1000;
   sendRtpData();
   clock_counter++;
-  clock_pll_timer->start(100.0*clock_pll_ratio);
+  clock_pll_timer->start(500.0*clock_pll_ratio);
 }
 
 
@@ -95,16 +121,7 @@ void SyClock::sendRtpData()
   if(clock_burst_counter>0) {
     emit sendRtp();
     clock_burst_counter--;
+    clock_pcm_frame+=240;
     clock_rtp_timer->start(5);
   }
-}
-
-
-double SyClock::GetTime()
-{
-  struct timeval tv;
-
-  memset(&tv,0,sizeof(tv));
-  gettimeofday(&tv,NULL);
-  return (double)tv.tv_sec+(double)tv.tv_usec/1000000.0;
 }
